@@ -1,3 +1,8 @@
+2007-09-27  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* testsuite/util/testsuite_hooks.cc (set_memory_limits): Adjust
+	x86_64 virtual memory setting for libgomp.
+	
 2007-09-26  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* include/bits/stl_algo.h: Add return type information to comments.
